Atualização de classe e procedimentos, implantação do JOI e finalizaçao swagger
