# src/schemas/endereco.schema.ts
@@ -1,11 +1,32 @@
 import * as Joi from 'joi';
 
-export const EnderecoSchema = Joi.object({
-   // O ID geralmente é gerado pelo banco, mas pode ser validado se vier em uma rota de update
+// Schema do parametro ID
+export const enderecoIdSchema = Joi.object({
     id: Joi.number()
         .integer()
-        .positive(),
+        .positive()
+        .required()
+});
 
+// Schema do Parametro CEP
+export const enderecoCepSchema = Joi.object({
+  params: Joi.object({
+    cep: Joi.string()
+      .length(8)               
+      .pattern(/^\d+$/)         // Garante que seja estritamente numérico
+      .invalid('00000000000')   // Impede que o CPF seja apenas zeros
+      .required()               
+      .messages({
+        'string.length': 'O CEP deve ter exatamente 8 dígitos.',
+        'string.pattern.base': 'O CEP deve conter apenas números.',
+        'any.invalid': 'CEP inválido (não pode ser apenas zeros).',
+        'any.required': 'O parâmetro CEP é obrigatório.'
+      })
+  })
+});
+
+// Schema para os dados de Criação
+export const enderecoCreateSchema = Joi.object({
   // numeric(8,0) -> 8 dígitos exatos
     cep: Joi.number()
         .integer()
@@ -26,19 +47,14 @@ export const EnderecoSchema = Joi.object({
             'string.max': 'O logradouro deve ter no máximo 100 caracteres',
         }),
 
-    complemento: Joi.string()
-        .max(100)
-        .allow(null, '') // nullable: true na Entity
-        .optional(),
-
-    cidade: Joi.string()
+     cidade: Joi.string()
         .max(100)
         .required()
         .messages({
             'any.required': 'A cidade é obrigatória'
         }),
 
-  // char(2) -> Sigla do estado
+    // char(2) -> Sigla do estado
     estado: Joi.string()
         .length(2)
         .uppercase()
@@ -48,7 +64,37 @@ export const EnderecoSchema = Joi.object({
             'string.length': 'O estado deve ser a sigla com 2 caracteres (ex: SP)',
         }),
 
-  // Em geral, não validamos a lista de pessoas na criação de um endereço,
-  // mas se necessário, validamos como um array de IDs ou objetos
-  // pessoas: Joi.array().items(Joi.any()).optional()
 });
+
+// Schema para os dados de atualização
+export const enderecoUpdateSchema = Joi.object({
+    cep: Joi.string()
+        .length(8)               
+        .pattern(/^\d+$/)         // Garante que seja estritamente numérico
+        .invalid('00000000000')   // Impede que o CPF seja apenas zeros
+        .messages({
+            'string.length': 'O CEP deve ter exatamente 8 dígitos.',
+            'string.pattern.base': 'O CEP deve conter apenas números.',
+            'any.invalid': 'CEP inválido (não pode ser apenas zeros).'
+        }),
+
+    logradouro: Joi.string()
+        .max(100)
+        .messages({
+            'string.max': 'O logradouro deve ter no máximo 100 caracteres',
+        }),
+
+    cidade: Joi.string()
+        .max(100)
+        .messages({
+            'string.max': 'A cidade deve ter no máximo 150 caracteres'
+        }),
+
+    // char(2) -> Sigla do estado
+    estado: Joi.string()
+        .length(2)
+        .uppercase()
+        .messages({
+            'string.length': 'O estasdo deve ser a sigla com 2 caracteres (ex: SP)',
+        })
+}).min(1); // Garante que pelo menos um campo seja enviado para atualizar
